2008-05-23  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.ac:
	* data/mcus.ui:
	* src/Makefile.am: Changed the text editor to GtkSourceView.
	* src/instructions.h: Added an "END" instruction for simplicity's
	sake in determining when a simulation's ended.
	* src/interface.c:
	* src/interface.h:
	* src/main-window.c:
	* src/main.c:
	* src/main.h:
	* src/parser.c:
	* src/simulation.c:
	* src/simulation.h: Lots of work on the interface and simulation,
	and the interface now supports compilation and simulation of code
	entered into the editor. Simulations can be run, paused and stopped,
	and the input and output ports are now correctly handled, but the ADC
	isn't.

2008-05-21  Philip Withnall  <philip@tecnocode.co.uk>

	* src/instructions.h:
	* src/main-window.c:
	* src/main.c:
	* src/main.h:
	* src/parser.c: Add support for subroutines and clean up code which
	determines instruction size a little.

2008-05-20  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c:
	* src/parser.c: Added support for parsing (and ignoring) comments,
	and updated the test program accordingly.

2008-05-20  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c:
	* src/main-window.h:
	* src/Makefile.am:
	* data/mcus.ui: Some initial work on a basic UI, as well as a small
	test program.
	* src/instructions.h:
	* src/main.c:
	* src/main.h:
	* src/parser.c:
	* src/parser.h: Fixes for small parser bugs and the introduction of
	simulation iteration. The system has now been tested with a few
	small programs, and so far seems to work through them properly.

2008-05-18  Philip Withnall  <philip@tecnocode.co.uk>

	* .bzrignore: Ignored some more files.
	* src/Makefile.am:
	* src/instructions.h:
	* src/interface.c:
	* src/main.c:
	* src/main.h:
	* src/parser.c:
	* src/parser.h: Fixed build errors and warnings and the program
	now compiles.

2008-05-18  Philip Withnall  <philip@tecnocode.co.uk>

	* src/instructions.h:
	* src/main.h:
	* src/parser.c: